--- a/BookBee/src/test/teste front/teste.html
+++ b/BookBee/src/test/teste front/teste.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        label{ cursor: pointer;}
+        /* label{ cursor: pointer;}
         #coracao { display: none;}
         #coracao:checked+label>svg {
             animation: preencher;
@@ -21,7 +21,7 @@
             100% {
                 fill: #19b425;
             }
-        }
+        } */
     </style>
 </head>
 <body>
